--- a/contatti/index.html
+++ b/contatti/index.html
@@ -74,48 +74,64 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h2>Press Kit</h2>
-                <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
-                <p>Compila i campi del form e scarica le informazioni e le fotografie di Ca' Vecchia Beerstrot.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+                <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.jpg" alt="Press Kit" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <form action="input" class="extra-space-text-tab-contatti">
+                <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
+                <p>Scarica le informazioni e le fotografie di Ca' Vecchia Beerstrot. Se pubblichi un articolo o un post su di noi faccelo sapere scrivendoci a <a href="mailto:info@beerstrot?subject=Utilizzo Press Kit">info@beerstrot.it</a>.</p>
+                <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
+                <!-- <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate class="extra-space-text-tab-contatti">
                     <div class="row">
-                        <div class="small-10 medium-6 columns">  
-                            <label>Nome e Cognome
-                                <input type="text" placeholder="Nome Cognome" />
+                        <div class="small-10 medium-5 columns">  
+                            <label>Nome
+                                <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
                             </label>
                         </div>
+                        <div class="small-10 medium-5 columns end">  
+                            <label>Cognome
+                                <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Cognome" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="small-12  medium-8 columns end">  
                             <label>Email
-                                <input type="email" placeholder="esempio@esempio.it" />
+                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="esempio@esempio.it" />
                               </label>
                         </div>
                     </div>
                     <div class="row"> 
                         <div class="small-6  medium-5 columns">  
                             <label>Telefono
-                                <input type="tel" placeholder="telefono" />
+                                <input type="tel" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="telefono" />
                             </label>
                         </div>
                         <div class="small-6 medium-5 columns end">
                             <label>Professione
-                                <select>
-                                    <option value="1"></option>
-                                    <option value="1">Giornalista</option>
-                                    <option value="2">Blogger</option>
-                                    <option value="4">Altro</option>
+                                <select name="MMERGE4" class="required" id="mce-MMERGE4">
+                                    <option value=""></option>
+                                    <option value="Blogger">Blogger</option>
+                                    <option value="Giornalista">Giornalista</option>
+                                    <option value="Altro">Altro</option>
                                 </select>
                               </label>
                           </div>
                     </div>
                     <div class="row">
+                        <div style="position: absolute; left: -5000px;">
+                            <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
+                        </div>
                         <div class="small-12 medium-12 columns">
-                            <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download="Press Kit.pdf" class="button extra-space-button">Scarica il Press Kit</a>
+                            <input type="submit" value="Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
                         </div>
                     </div>
-                </form>
+                </form> -->
             </div>
         </div>
     </div>
