--- a/contatti/index.html
+++ b/contatti/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-12 columns">
                 <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.jpg" alt="Press Kit" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
