fixing press kit

--- a/contatti/index.html
+++ b/contatti/index.html
@@ -84,8 +84,8 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
-                <p>Scarica le informazioni e le fotografie di Ca' Vecchia Beerstrot. Se pubblichi un articolo o un post su di noi faccelo sapere scrivendoci a <a href="mailto:info@beerstrot?subject=Utilizzo Press Kit">info@beerstrot.it</a>.</p>
-                <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
+                <p>Scarica le informazioni e le fotografie di Ca' Vecchia Beerstrot.</p>
+                <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
                 <!-- <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate class="extra-space-text-tab-contatti">
                     <div class="row">
                         <div class="small-10 medium-5 columns">  
