--- a/contatti/index.html
+++ b/contatti/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.jpg" alt="Press Kit" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.png" alt="Press Kit" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
