fix italia to Italia

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -68,7 +68,7 @@
                         <div class="medium-8 large-8 columns">
                             <article class="row">
                                 <div class="medium-12 large-12 columns">
-                                    <p>Amiamo la birra artigianale e il buon cibo. Dal 2005 serviamo buon cibo ai newyorkesi in due locali in midtown&mdash;per le birre ci stiamo attrezzando. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimo cibo agli italiani e a tutti coloro che verranno a visitarci.</p>
+                                    <p>Amiamo la birra artigianale e il buon cibo. Dal 2005 serviamo buon cibo ai newyorkesi in due locali in midtown&mdash;per le birre ci stiamo attrezzando. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimo cibo agli Italiani e a tutti coloro che verranno a visitarci.</p>
                                     <h2>Il nostro mantra</h2>
                                     <blockquote>
                                         <p>Abbiamo un solo obiettivo: <strong>produrre la birra più buona al mondo e servirla con cibo grandioso.</strong> <br>Produciamo e serviamo solo quello che amiamo, utilizzando materie prime a km zero e di altissima qualità.
@@ -137,7 +137,7 @@
                                         <span itemprop="addressLocality">Filottrano</span>
                                         <span itemprop="addressRegion">AN</span>
                                         <br class="hide-for-small">
-                                        <span class="hide-for-small" itemprop="addressCountry">italia</span>
+                                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
                                     </a>
                                 </h6>
                                 
@@ -302,7 +302,7 @@
                                 <span itemprop="addressLocality">Filottrano</span>
                                 <span itemprop="addressRegion">AN</span>
                                 <br class="hide-for-small">
-                                <span class="hide-for-small" itemprop="addressCountry">italia</span>
+                                <span class="hide-for-small" itemprop="addressCountry">Italia</span>
                             </a>
                         </h6>
                         <h5 class="extra-space-aside">Orari aperura</h5>
