--- a/menu/menu-beerstrot-ipa.html
+++ b/menu/menu-beerstrot-ipa.html
@@ -175,7 +175,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">italia</span>
+                        <span class="" itemprop="addressCountry">Italia</span>
                     </a>
                 </p>
             </div>
