--- a/contatti/index.html
+++ b/contatti/index.html
@@ -62,7 +62,7 @@
                         <span itemprop="postalCode">60024</span>
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
-                        <span class="hide-for-small" itemprop="addressCountry">italia</span></a> 
+                        <span class="hide-for-small" itemprop="addressCountry">Italia</span></a> 
                     </h6>
                     <span class="hide-for-small"><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un Tavolo</a></span>
             </div>
