--- a/menu/index.html
+++ b/menu/index.html
@@ -455,7 +455,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="hide-for-small" itemprop="addressCountry">italia</span>
+                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
                     </a>
                 </h6>
                 
