--- a/menu/menu-con-immagini.html
+++ b/menu/menu-con-immagini.html
@@ -688,7 +688,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="hide-for-small" itemprop="addressCountry">italia</span>
+                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
                     </a>
                 </h6>
                 
@@ -816,7 +816,7 @@
                         <span itemprop="addressLocality">Filottrano</span>
                         <span itemprop="addressRegion">AN</span>
                         <br class="hide-for-small">
-                        <span class="" itemprop="addressCountry">italia</span>
+                        <span class="" itemprop="addressCountry">Italia</span>
                     </a>
                 </p>
             </div>
