--- a/contatti/index.html
+++ b/contatti/index.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
-                <p>Compila il form e ricevi tutte le informazioni e i media necessari per cominciare.</p>
+                <p>Compila il form e ricevi tutte le informazioni e i media necessari per cominciare a scrivere di Ca' Vecchia Beerstrot.</p>
                 <!-- <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a> -->
                 <!-- <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.png" alt="Press Kit" class="extra-space-image-tab-home"></a> -->
             </div>
@@ -128,7 +128,7 @@
                             <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
                         </div>
                         <div class="small-12 medium-12 columns">
-                            <input type="submit" value="Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
+                            <input type="submit" value="Iscriviti e Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
                         </div>
                     </div>
                 </form>
