--- a/contatti/press-kit/index.html
+++ b/contatti/press-kit/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/contatti" />
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -42,96 +42,18 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Contatti</h1>
+            <h1>Grazie per esserti iscritto alla lista Press-Kit</h1>
             <br>
         </div>
     </header>
     <div class="panel-home-2n">
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h2>Ca' Vecchia Beerstrot</h2>
-                    <h6>Telefono: 
-                        <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
-                    </h6>
-                    <h6>Email: 
-                        <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
-                    </h6>
-                    <h6>Indirizzo: 
-                        <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                        <span itemprop="postalCode">60024</span>
-                        <span itemprop="addressLocality">Filottrano</span>
-                        <span itemprop="addressRegion">AN</span>
-                        <span class="hide-for-small" itemprop="addressCountry">Italia</span></a> 
-                    </h6>
-                    <span class="hide-for-small"><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un Tavolo</a></span>
+                <h2>Scarica il Press-Kit</h2>
+                    <a role="button" href="http://beerstrot.it/contatti/press-kit/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/img/large/mappa.jpg" alt="Mappa"></a>
-                <span class="show-for-small"><br><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un Tavolo</a></span>
-            </div>
-        </div>
-    </div>
-    <div class="panel-home-n">
-        <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
-                <h2>Press Kit</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="medium-6 large-6 columns">
-                <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
-                <p>Compila il form e ricevi tutte le informazioni e i media necessari per cominciare.</p>
-                <!-- <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a> -->
-                <!-- <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.png" alt="Press Kit" class="extra-space-image-tab-home"></a> -->
-            </div>
-            <div class="medium-6 large-6 columns">
-                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="extra-space-text-tab-contatti">
-                    <div class="row">
-                        <div class="small-10 medium-5 columns">  
-                            <label>Nome
-                                <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
-                            </label>
-                        </div>
-                        <div class="small-10 medium-5 columns end">  
-                            <label>Cognome
-                                <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Cognome" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="small-12  medium-8 columns end">  
-                            <label>Email
-                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="esempio@esempio.it" />
-                              </label>
-                        </div>
-                    </div>
-                    <div class="row"> 
-                        <div class="small-6  medium-5 columns">  
-                            <label>Telefono
-                                <input type="tel" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="telefono" />
-                            </label>
-                        </div>
-                        <div class="small-6 medium-5 columns end">
-                            <label>Professione
-                                <select name="MMERGE4" class="required" id="mce-MMERGE4">
-                                    <option value=""></option>
-                                    <option value="Blogger">Blogger</option>
-                                    <option value="Giornalista">Giornalista</option>
-                                    <option value="Altro">Altro</option>
-                                </select>
-                              </label>
-                          </div>
-                    </div>
-                    <div class="row">
-                        <div style="position: absolute; left: -5000px;">
-                            <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
-                        </div>
-                        <div class="small-12 medium-12 columns">
-                            <input type="submit" value="Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
-                        </div>
-                    </div>
-                </form>
+                <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.png" alt="Press Kit" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
