--- a/contatti/press-kit/index.html
+++ b/contatti/press-kit/index.html
@@ -50,10 +50,11 @@
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h2>Scarica il Press-Kit</h2>
+                    <p>Ti abbiamo inviato una email. Conferma l'iscrizione se vuoi ricevere aggiornamenti su Ca' Vecchia Beerstrot.</p>
+                    <p>Nel frattempo scarica il press-kit.</p>
                     <a role="button" href="http://beerstrot.it/contatti/press-kit/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank"><img src="http://beerstrot.it/img/large/press-kit.png" alt="Press Kit" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
