--- a/contatti/press-kit/index.html
+++ b/contatti/press-kit/index.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Contatti</title>
+    <title>Beerstrot | Scarica il Press Kit </title>
     <meta name="description" content="Birre rigorosamente artigianali: servite nel bicchiere che ne risalta profumi e sapori. Impieghiamo ore per fare training ai nostri ragazzi."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="canonical" href="http://beerstrot.it/contatti" />
+    <link rel="canonical" href="http://beerstrot.it/contatti/press-kit/" />
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -42,7 +42,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Grazie per esserti iscritto alla lista Press-Kit</h1>
+            <h1>Grazie</h1>
             <br>
         </div>
     </header>
@@ -50,8 +50,8 @@
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h2>Scarica il Press-Kit</h2>
-                    <p>Ti abbiamo inviato una email. Conferma l'iscrizione se vuoi ricevere aggiornamenti su Ca' Vecchia Beerstrot.</p>
-                    <p>Nel frattempo scarica il press-kit.</p>
+                    <p>Ti abbiamo inviato una email. Conferma l'iscrizione se vuoi ricevere aggiornamenti su Ca' Vecchia Beerstrot. Nel frattmpo scarica il press kit.</p>
+                    
                     <a role="button" href="http://beerstrot.it/contatti/press-kit/beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
             </div>
             <div class="medium-6 large-6 columns">
