--- a/contatti/press-kit/index.html
+++ b/contatti/press-kit/index.html
@@ -46,7 +46,7 @@
             <br>
         </div>
     </header>
-    <div class="panel-home-2n">
+    <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h2>Scarica il Press-Kit</h2>
