--- a/404.html
+++ b/404.html
@@ -41,6 +41,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
             <p>Non abbiamo idea di dove sia la pagina che cerchi.</p>
+            <p>Se cerchi il video, sarà on-line verso il primo di Maggio, crediamo del 2015...</p>
             <a href="http://beerstrot.it">Torna a casa</a>
         </div>
     </div>
