--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -83,7 +83,7 @@
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un tavolo</a>
+                        <a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a>
                     </div>
                 </div>
             </div>   
