--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </header>
-<!-- fine hero -->
+<!-- fine header -->
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-12 large-12 columns">
