--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -19,7 +19,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="asset/img/_src/svgs/logo.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
