--- a/menu/index.html
+++ b/menu/index.html
@@ -68,30 +68,31 @@
 <!-- cibo--> 
                     <article class="row content active" role="tabpanel" aria-hidden="false" id="menu">
                         <div class="large-12 medium-12 small-12 columns">
-                            <h1 class="subheader ">Apetizer</h1>
+                            <h1 class="subheader ">Per Stuzzicare</h1>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-battuto-di-vitello.html">Battuto di vitello</a></h2>    
-                                    <p>Il attuto di vitello viene fatto con zenzero, cannella e tomino. Tagliato a mano e impiattato per delliziare i tuoi occhi.</p>
-                                    <h6 class="subheader">€8</h6>
+                                    <h2><a href="menu-battuto-di-vitello.html">Peperoncini e Pancetta<span class="right">5</h2></a>    
+                                    <p>Peperoncini piccanti avvolti nella pancetta</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-tomino-di-novara.html">Tomino di Novara</a></h2>
-                                    <p>tomino e pancetta </p>
-                                    <h6 class="subheader">€12</h6>
+                                    <h2><a href="menu-battuto-di-vitello.html">Frittelle di capperi<span class="right">5</h2></a>    
+                                    <p>Uova e capperi in padella</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-fiore-di-zucca.html">Fiore di Zucca</a></h2>
-                                    <p>fiori freschi fritti e saltati</p>
-                                    <h6 class="subheader">€16</h6>
+                                    <h2><a href="menu-battuto-di-vitello.html">Asparagi in sfoglia<span class="right">5</h2></a>    
+                                    <p>Asparagi in sfoglia con crudo</p>
+                                </li>
+                                <li>
+                                    <h2><a href="menu-battuto-di-vitello.html">Salumi<span class="right">9</h2></a>    
+                                    <p>Crudo, Lonza, Ciauscolo, Salame, Coppa</p>
                                 </li>
                             </ul>
-                            <h1 class="subheader">Main Dishes</h1>
+                            <h1 class="subheader">Pasta</h1>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-tris-mini-hamburger.html">Tris Mini Hamburger</a></h2>
-                                    <p>un fantastico trio di carne fantastica</p>
-                                    <h6 class="subheader">€14</h6>
+                                    <h2><a href="menu-tris-mini-hamburger.html">Tortelloni</a></h2>
+                                    <p>Tortelloni burro e salvia</p>
+                                    <h6 class="subheader">7</h6>
                                 </li>
                                 <li>
                                     <h2><a href="menu-hamburger.html">Hamburger</a></h2>
