--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
