--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -2,14 +2,14 @@
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Chi Siamo</title>
-    <meta name="description" content="Birre rigorosamente artigianali: servite nel bicchiere che ne risalta profumi e sapori. Impieghiamo ore per fare training ai nostri ragazzi." />
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="canonical" href="http://beerstrot.it/chi-siamo" />
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
+    <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Hamburger strepitosi in un locale bellissimo."/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
