--- a/menu/index.html
+++ b/menu/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="RIscopri i sapori con il nostro menu. Esplora le nuove birre e il piatto del giorno." />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="canonical" href="http://beerstrot.it/menu" />
+    <link rel="canonical" href="http://beerstrot.it/menu/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
