update structured data

--- a/contatti/index.html
+++ b/contatti/index.html
@@ -192,7 +192,7 @@
                     </a>
                 </p>
             </div>
-            <div class="small-6 medium-3 large-3 large-collapse columns">
+            <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
