--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 <!-- navbar con hamburger -->
     <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
+        <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -69,10 +69,10 @@
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/asset/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                <a role="button" href="http://beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
+                <a itemprop="menu" role="button" href="http://beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
             </div>
         </div>
     </div>
@@ -189,7 +189,7 @@
     </footer>
     <footer class="panel-footer">
         <div class="row">
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
                     <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
