--- a/_ARCHIVE/menu-porter-black.html
+++ b/_ARCHIVE/menu-porter-black.html
@@ -15,7 +15,7 @@
 <body>
     <!-- navbar con hamburger -->
     <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
+        <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
                  <h1><a href="index.html"><img class="img-logo" src="img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
