--- a/contatti/index.html
+++ b/contatti/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
    <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
+        <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
                  <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
