--- a/contatti/index.html
+++ b/contatti/index.html
@@ -47,7 +47,7 @@
     </header>
     <div class="panel-home-2n">
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-6 large-6 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
                         <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
@@ -66,7 +66,7 @@
                     <span class="hide-for-small"><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/asset/img/large/mappa.jpg" alt="Mappa"></a>
+                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/asset/img/large/mappa.jpg" alt="Mappa"></a>
                 <span class="show-for-small"><br><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
             </div>
         </div>
