--- a/eventi/index.html
+++ b/eventi/index.html
@@ -53,7 +53,7 @@
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">25 Apr 2014</h3>
                     <h5>Orario: 17:00-22:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/burlesque-th.jpg" alt="Burlesque"></a>
