--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -69,7 +69,7 @@
                             <div class="share-block">
                                 <h5 class="date" style="margin-top: 0.5em;">25 Aprile 2014</h5>
                                 <h5>Dalle 17:00 alle 22:00</h5>
-                                <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
+                                <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
                     </div>
